<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background"
    android:orientation="vertical"
    tools:context="com.bikefit.wedgecalculator.main.MainMenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/TitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationContentDescription="@string/toolbar_content_description_back"
        app:navigationIcon="?homeAsUpIndicator"
        app:popupTheme="@style/TitleBar.PopupThemeOverlay"
        app:theme="@style/TitleBar.ThemeOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_margins"
        android:layout_marginRight="@dimen/app_margins"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/app_margins"
            android:background="@android:color/transparent"
            android:contentDescription="@string/main_menu_fragment_bikefit_logo_content_description"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/bikefit_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:text="@string/main_menu_fragment_instruction_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_menu_fragment_orientation_video_button"
                    style="@style/BorderlessButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/main_menu_fragment_orientation_video" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_menu_fragment_what_you_need_button"
                    style="@style/BorderlessButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/main_menu_fragment_what_you_need" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_menu_fragment_get_in_position_button"
                    style="@style/BorderlessButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/main_menu_fragment_get_in_position" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_menu_fragment_measure_your_feet_button"
                    style="@style/BorderlessButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/main_menu_fragment_measure_your_feet_button_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_menu_fragment_get_results_button"
                    style="@style/BorderlessButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="true"
                    android:text="@string/main_menu_fragment_get_results" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panelBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margins"
        android:layout_marginLeft="@dimen/app_margins"
        android:layout_marginRight="@dimen/app_margins"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/main_menu_fragment_start_button"
            style="@style/Button.Focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/main_menu_fragment_start_button_text" />

    </LinearLayout>

</LinearLayout>
