...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:text="@string/measure_feet_instructions_fragment_more_button_text" />

        <Button
            android:id="@+id/measure_feet_instructions_fragment_snapshot_button"
            style="@style/Button.Focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:focusable="true"
...
