...
            app:popupTheme="@style/TitleBar.PopupThemeOverlay"
            app:theme="@style/TitleBar.ThemeOverlay" />

    </FrameLayout>

    <Button
        android:id="@+id/get_in_position_fragment_measure_button"
        style="@style/Button.Focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/app_margins"
        android:layout_marginLeft="@dimen/app_margins"
...
