...
            app:navigationIcon="?homeAsUpIndicator"
            app:popupTheme="@style/TitleBar.PopupThemeOverlay"
            app:theme="@style/TitleBar.ThemeOverlay" />
    </FrameLayout>

    <Button
        android:id="@+id/what_you_need_fragment_ok_button"
        style="@style/Button.Focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margins"
        android:layout_marginLeft="@dimen/app_margins"
        android:layout_marginRight="@dimen/app_margins"
...
